5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1675_2471.log
== TEST (2019-05-07 11:08:16) 
-- CODE:
a = int(input('idade: '))
IMC = float(input('IMC: '))

print('Entradas: ',a,'anos e IMC',IMC)
if ((a<=0) or (a>130)) and (IMC<=0)
	print('Dados invalidos')
elif (a<45) and (IMC<22.0):
	print('Risco: Baixo')
elif (a<45) and (IMC>=22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC<22.0)
	print('Risco: Medio')
	elif (a>=45) and (IMC>=22.0):
	print('Risco: Alto')
-- ERROR:
File "XXXX", line 5
    if ((a<=0) or (a>130)) and (IMC<=0)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 11:08:53) 
-- CODE:
a = int(input('idade: '))
IMC = float(input('IMC: '))

print('Entradas: ',a,'anos e IMC',IMC)
if ((a<=0) or (a>130)) and (IMC<=0)
	print('Dados invalidos')
elif (a<45) and (IMC<22.0):
	print('Risco: Baixo')
elif (a<45) and (IMC>=22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC<22.0)
	print('Risco: Medio')
	elif (a>=45) and (IMC>=22.0):
	print('Risco: Alto')
-- ERROR:
File "XXXX", line 5
    if ((a<=0) or (a>130)) and (IMC<=0)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 11:08:57) 
-- CODE:
a = int(input('idade: '))
IMC = float(input('IMC: '))

print('Entradas: ',a,'anos e IMC',IMC)
if ((a<=0) or (a>130)) and (IMC<=0)
	print('Dados invalidos')
elif (a<45) and (IMC<22.0):
	print('Risco: Baixo')
elif (a<45) and (IMC>=22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC<22.0)
	print('Risco: Medio')
	elif (a>=45) and (IMC>=22.0):
	print('Risco: Alto')
-- ERROR:
File "XXXX", line 5
    if ((a<=0) or (a>130)) and (IMC<=0)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 11:09:09) 
-- CODE:
a = int(input('idade: '))
IMC = float(input('IMC: '))

print('Entradas: ',a,'anos e IMC',IMC)
if ((a<=0) or (a>130)) and (IMC<=0)
	print('Dados invalidos')
elif (a<45) and (IMC<22.0):
	print('Risco: Baixo')
elif (a<45) and (IMC>=22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC<22.0):
	print('Risco: Medio')
	elif (a>=45) and (IMC>=22.0):
	print('Risco: Alto')
-- ERROR:
File "XXXX", line 5
    if ((a<=0) or (a>130)) and (IMC<=0)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 11:09:13) 
-- CODE:
a = int(input('idade: '))
IMC = float(input('IMC: '))

print('Entradas: ',a,'anos e IMC',IMC)
if ((a<=0) or (a>130)) and (IMC<=0)
	print('Dados invalidos')
elif (a<45) and (IMC<22.0):
	print('Risco: Baixo')
elif (a<45) and (IMC>=22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC<22.0):
	print('Risco: Medio')
	elif (a>=45) and (IMC>=22.0):
	print('Risco: Alto')
-- ERROR:
File "XXXX", line 5
    if ((a<=0) or (a>130)) and (IMC<=0)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 11:09:14) 
-- CODE:
a = int(input('idade: '))
IMC = float(input('IMC: '))

print('Entradas: ',a,'anos e IMC',IMC)
if ((a<=0) or (a>130)) and (IMC<=0)
	print('Dados invalidos')
elif (a<45) and (IMC<22.0):
	print('Risco: Baixo')
elif (a<45) and (IMC>=22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC<22.0):
	print('Risco: Medio')
	elif (a>=45) and (IMC>=22.0):
	print('Risco: Alto')
-- ERROR:
File "XXXX", line 5
    if ((a<=0) or (a>130)) and (IMC<=0)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 11:09:35) 
-- CODE:
a = int(input('idade: '))
IMC = float(input('IMC: '))

print('Entradas: ',a,'anos e IMC',IMC)

if ((a<=0) or (a>130)) and (IMC<=0):
	print('Dados invalidos')
elif (a<45) and (IMC<22.0):
	print('Risco: Baixo')
elif (a<45) and (IMC>=22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC<22.0):
	print('Risco: Medio')
	elif (a>=45) and (IMC>=22.0):
	print('Risco: Alto')
-- ERROR:
File "XXXX", line 14
    elif (a>=45) and (IMC>=22.0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 11:09:41) 
-- CODE:
a = int(input('idade: '))
IMC = float(input('IMC: '))

print('Entradas: ',a,'anos e IMC',IMC)

if ((a<=0) or (a>130)) and (IMC<=0):
	print('Dados invalidos')
elif (a<45) and (IMC<22.0):
	print('Risco: Baixo')
elif (a<45) and (IMC>=22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC<22.0):
	print('Risco: Medio')
	elif (a>=45) and (IMC>=22.0):
	print('Risco: Alto')
-- ERROR:
File "XXXX", line 14
    elif (a>=45) and (IMC>=22.0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 11:09:56) 
-- CODE:
a = int(input('idade: '))
IMC = float(input('IMC: '))

print('Entradas: ',a,'anos e IMC',IMC)

if ((a<=0) or (a>130)) and (IMC<=0):
	print('Dados invalidos')
elif (a<45) and (IMC<22.0):
	print('Risco: Baixo')
elif (a<45) and (IMC>=22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC<22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC>=22.0):
	print('Risco: Alto')
-- OUTPUT:
Entradas:  0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 11:10:14) 
-- CODE:
a = int(input('idade: '))
IMC = float(input('IMC: '))

print('Entradas: ',a,'anos e IMC',IMC)

if ((a<=0) or (a>130)) and (IMC<=0):
	print('Dados invalidos')
elif (a<45) and (IMC<22.0):
	print('Risco: Baixo')
elif (a<45) and (IMC>=22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC<22.0):
	print('Risco: Medio')
elif (a>=45) and (IMC>=22.0):
	print('Risco: Alto')
-- EXECUTION TIME:
0.143811
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
